--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,4 +2,5 @@
 	<p>Welcome! Please <a href="/login">log in</a>.</p>
 <% } else { %>
 	<p>Hello, <%= user.username %>. View your <a href="/profile">profile</a>.</p>
+	<p>You can also <a href="/logout">log out</a>.</p>
 <% } %>
